tests/baselines/reference/autoAccessor5(target=esnext).errors.txt
autoAccessor5.ts(10,14): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.


==== autoAccessor5.ts (1 errors) ====
    class C1 {
        accessor ["w"]: any;
        accessor ["x"] = 1;
        static accessor ["y"]: any;
        static accessor ["z"] = 2;
    }
    
    declare var f: any;
    class C2 {
        accessor [f()] = 1;
                 ~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    }